# CommonModules

./: .gitignore  CMakeLists.txt  README.md  index.html  project.md  search.html
config/: testConfig.cfg
input/: square.geo  testConfig.cfg
interface/: abs.html  abs_t.html  acos_t.html  ad_t.html  add_t.html  asin_t.html  assignment(=).html  atan_t.html  bicgstab_t.html  config_t.html  conjg.html  conjugategradient_t.html  cos.html  cos_t.html  cubicspline_t.html  der.html  dft.html  diff1.html  diff3.html  div_t.html  evalr_p.html  evalz_p.html  exp.html  exp_t.html  exp~2.html  fft.html  flatten.html  function_t.html  gaussseidel_t.html  idft.html  ifft.html  imag_t.html  jacobi_t.html  linearspline_t.html  linesearch_t.html  log.html  log10.html  log10_t.html  log10~2.html  log_t.html  (+61 more)
lists/: files.html  modules.html  procedures.html  programs.html  types.html
module/: array_mod.html  autodiff_mod.html  autodiffarray_mod.html  autodiffexponential_mod.html  autodiffoperator_mod.html  autodifftrigonometric_mod.html  autodifftype_mod.html  basicsolvers_mod.html  config_mod.html  expression_mod.html  fourier_mod.html  iterate_mod.html  kinds_mod.html  matio_mod.html  mesh_mod.html  netcdf_mod.html  node_mod.html  objective_mod.html  optimize_mod.html  plplotlib_mod.html  quaternion_mod.html  solvers_mod.html  sparse_mod.html  spline_mod.html  stats_mod.html  tensor_mod.html  text_mod.html  time_mod.html  treeexponential_mod.html  treeoperator_mod.html  treetrigonometric_mod.html  treevalue_mod.html  vtkio_mod.html
page/: autoDiff.html  expression.html  fourier.html  index.html  license.html
page/IO/: config.html  index.html  matIO.html  mesh.html  netCDF.html  vtkIO.html
page/Matrix/: index.html  quaternion.html  solvers.html  sparse.html  tensor.html
page/PlPlotLib/: arguments.html  escapeCodes.html  index.html
pages/: arguments.md  autoDiff.md  config.md  escapeCodes.md  expression.md  fourier.md  index.md  license.md  netCDF.md  plplotlib.md  quaternion.md  solvers.md  sparse.md  tensor.md
pages/IO/: index.md  matIO.md  mesh.md  vtkIO.md
pages/Matrix/: index.md  quaternion.md
pages/PlPlotLib/: arguments.md  escapeCodes.md  index.md
proc/: arg.html  arraytochar.html  bar.html  barh.html  biconjugategradientstabilized.html  bindata.html  box.html  chartoarray.html  checkprecision.html  colorbar.html  colorbar2.html  colorize.html  colormap.html  conjugategradient.html  contour.html  contourf.html  cos_a.html  cputime.html  dedup.html  dobar.html  docontour.html  doerror.html  dofillbetween.html  dofunction.html  dohist.html  dolegend.html  dologplot.html  doplot.html  doquiver.html  doscatter.html  dosurface.html  endswith.html  errorbar.html  eval_test.html  eval_testn.html  evalr_abs.html  evalr_acos.html  evalr_add.html  evalr_asin.html  evalr_atan.html  (+177 more)
program/: animate_prg.html  basic_prg.html  examples_prg.html  logo_prg.html  testarray_prg.html  testautodiff_prg.html  testconfig_prg.html  testeval_prg.html  testfourier_prg.html  testiterate_prg.html  testkinds_prg.html  testmatio_prg.html  testmesh_prg.html  testnetcdf_prg.html  testoptimize_prg.html  testquaternion_prg.html  testsparse_prg.html  testspline_prg.html  teststats_prg.html  testtensor_prg.html  testtext_prg.html  testtime_prg.html  testvtkio_prg.html
references/: derivations.lyx  splineFiniteDifference.py
sourcefile/: animate.f90.html  array.f90.html  autodiff.f90.html  autodiffarray.f90.html  autodiffexponential.f90.html  autodiffoperator.f90.html  autodifftrigonometric.f90.html  autodifftype.f90.html  basic.f90.html  basicsolvers.f90.html  config.f90.html  examples.f90.html  expression.f90.html  fourier.f90.html  iterate.f90.html  kinds.f90.html  logo.f90.html  matio.f90.html  mesh.f90.html  netcdf.f90.html  node.f90.html  optimize.f90.html  plplotlib.f90.html  quaternion.f90.html  solvers.f90.html  sparse.f90.html  spline.f90.html  stats.f90.html  tensor.f90.html  testarray.f90.html  testautodiff.f90.html  testconfig.f90.html  testexpression.f90.html  testfourier.f90.html  testiterate.f90.html  testkinds.f90.html  testmatio.f90.html  testmesh.f90.html  testnetcdf.f90.html  testoptimize.f90.html  (+15 more)
src/: array.f90  autoDiff.f90  autoDiffArray.f90  autoDiffTrigonometric.f90  autoDiffType.f90  basic.f90  config.f90  constants.f90  eval.f90  examples.f90  expression.f90  fftw3.f90  fourier.f90  generate-unitsParameters.py  iterate.f90  kinds.f90  linalg.f90  linalg_lib.c  matIO.f90  mesh.f90  netCDF.f90  node.f90  optimize.f90  plplotlib.f90  random.f90  solvers.f90  sparse.f90  spline.f90  stats.f90  testArray.f90  testAutoDiff.f90  testExpression.f90  testKinds.f90  testMesh.f90  testNetCDF.f90  testQuaternion.f90  testStats.f90  text.f90  time.f90  units.f90
src/IO/: config.f90  matIO.f90  mesh.f90  netCDF.f90  text.f90  vtkIO.f90
src/autoDiff/: autoDiff.f90  autoDiffArray.f90  autoDiffExponential.f90  autoDiffOperator.f90  autoDiffTrigonometric.f90  autoDiffType.f90  autoDiffZ.f90  autoDiffZArray.f90  autoDiffZExponential.f90  autoDiffZOperator.f90  autoDiffZTrigonometric.f90  autoDiffZType.f90
src/example/: examplePlplotlib.f90
src/expression/: eval.f90  expression.f90  node.f90  tree.f90  treeExponential.f90  treeOperator.f90  treeTrigonometric.f90  treeValue.f90
src/matrix/: basicSolvers.f90  basicSolversZ.f90  quaternion.f90  solver.f90  solvers.f90  sparse.f90  sparseZ.f90  tensor.f90
src/plplotlib/: animate.f90  basic.f90  examples.f90  logo.f90  plplotlib.f90  plplotlib1D.f90  (+4 more)
type/: abs_t.html  acos_t.html  ad1_t.html  ad3_t.html  ad_t.html  add_t.html  asin_t.html  atan_t.html  bicgstab_t.html  config_t.html  conjugategradient_t.html  cos_t.html  cubicspline_t.html  div_t.html  element_t.html  exp_t.html  function_t.html  gaussseidel_t.html  genericnode_t.html  group_t.html  imag_t.html  iterator_t.html  jacobi_t.html  linearspline_t.html  linesearch_t.html  log10_t.html  log_t.html  mesh_t.html  mul_t.html  neg_t.html  node_t.html  node_t~2.html  nodestack_t.html  obj_t.html  objn_t.html  pow_t.html  quat_t.html  real_t.html  sin_t.html  solver_t.html  (+11 more)
(+22 files in other folders)
